--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <div class="container header-container">
+    <div class="old-container header-container">
       <a class="animated fadeInLeft slow" href="#">
         <div class="header-logo-img-container">
           <div class="logo-background"></div>
@@ -37,7 +37,7 @@
 
   <main>
     <section id="home">
-      <div class="container">
+      <div class="old-container">
         <div class="home-content animated fadeInUp slow">
           <p class="home-content__subtitle">Somos lo que buscas</p>
           <h1 class="home-content__hero-message">Especialistas en arriendo y equipamiento.</h1>
@@ -46,34 +46,26 @@
       </div>
     </section>
 
-    <section id="nosotros">
-      <div class="nosotros-content">
-        <h1 class="section-title fade-down">Bienvenido a <span class="title-accent">EQYS</span></h1>
+    <section id="quienes-somos">
+      <div class="container">
+        <h1 class="section-header">Quienes Somos</h1>
 
-        <!-- <div class="grafico">
-          <div class="horz-line"></div>
-          <div class="square"></div>
-          <div class="square big"></div>
-          <div class="square"></div>
-          <div class="horz-line"></div>
-        </div> -->
+        <div class="barra">
+          <div class="circulo"></div>
+        </div>
 
-        <p class="nosotros-copy fade-up">
-          Somos especialistas en entregar soluciones en arriendo, mantenimiento de flotas, equipamiento De flotas y
-          outsourcing técnico para empresas del rubro de vehículos livianos y pesados.
-
-          Nuestro objetivo es ayudar y guiar a nuestros clientes desde la compra de la flota de vehículos y el arriendo
-          de
-          maquinarias, el equipamiento y mantenimiento técnico especialista de este. Ayudamos a generar mayor
-          rentabilidad
-          en los activos desde su inicio hasta su curva de uso rentabilizando cada activo mensual y anual, nuestro
-          diseño
-          de intervención desde su Punto inicial hasta la renovación de este.
-        </p>
+        <p class="section-text">Somos especialistas en entregar soluciones, mantenimiento, equipamiento, compra de
+          flotas
+          de vehículos y maquinarias. Ademas de eso ofrecemos soluciones de outsourcing técnico en mantenimiento y aseo
+          industrial especializado para empresas del rubro de vehículos livianos y pesados. Nuestro objetivo es ayudar y
+          guiar clientes desde la compra de la flota, el equipamiento y mantenimiento de este. Ayudamos a generar mayor
+          rentabilidad en las activos desde su inicio hasta su curva de uso, rentabilizando cada uno de ellos con el
+          perfecto funcionamiento y crecimiento de su vida útil. Nuestro diseño de intervención incorpora tecnología,
+          conocimiento y continuidad operativa permanente. </p>
       </div>
     </section>
 
-    <section id="servicios">
+    <!-- <section id="servicios">
       <h1 class="section-title-2 fade-down">Nuestros Servicios</h1>
       <p class="section-subtitle fade-down">Nos encargamos de implementar los mejores especialistas al servicio de tu
         empresa.</p>
@@ -92,7 +84,7 @@
           <h1 class="servicio-tipo-nombre">Aseo <span class="italic">Industrial</span></h1>
         </div>
       </div>
-    </section>
+    </section> -->
   </main>
 
   <script src="./index.js"></script>
