--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
       </div>
     </section>
 
+    <section id="nuestros-clientes">
+      <h1 class="section-header">Nuestros Clientes</h1>
+      <div class="barra">
+        <div class="circulo"></div>
+      </div>
+
+      <div class="container clientes-logos">
+        <img class="cliente-logo" src="./assets/img/clientes/atf.png" alt="cliente-logo">
+        <img class="cliente-logo" src="./assets/img/clientes/icetel.png" alt="cliente-logo">
+        <img class="cliente-logo" src="./assets/img/clientes/horizon.png" alt="cliente-logo">
+        <img class="cliente-logo" src="./assets/img/clientes/ingenieria.png" alt="cliente-logo">
+        <img class="cliente-logo" src="./assets/img/clientes/neomao.png" alt="cliente-logo">
+        <img class="cliente-logo" src="./assets/img/clientes/haulotte.png" alt="cliente-logo">
+        <img class="cliente-logo" src="./assets/img/clientes/ov.png" alt="cliente-logo">
+        <img class="cliente-logo" src="./assets/img/clientes/ingol.png" alt="cliente-logo">
+      </div>
+    </section>
+
     <!-- <section id="servicios">
       <h1 class="section-title-2 fade-down">Nuestros Servicios</h1>
       <p class="section-subtitle fade-down">Nos encargamos de implementar los mejores especialistas al servicio de tu
