--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text:400i|Montserrat:400,700,900,900i&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css?family=DM+Serif+Text:400i|Montserrat:400,700,900,900i|Titillium+Web:600&display=swap"
     rel="stylesheet">
 
   <!-- AnimateCSS -->
@@ -83,12 +84,157 @@
       </div>
     </section>
 
-    <!-- <section id="servicios">
-      <h1 class="section-title-2 fade-down">Nuestros Servicios</h1>
-      <p class="section-subtitle fade-down">Nos encargamos de implementar los mejores especialistas al servicio de tu
+    <section id="servicios">
+      <h1 class="section-header">Nuestros Servicios</h1>
+
+      <div class="barra">
+        <div class="circulo"></div>
+      </div>
+
+      <p class="section-subtitle">Nos encargamos de implementar los mejores especialistas al servicio de tu
         empresa.</p>
 
-      <div class="container servicios-tipos fade-up">
+      <div class="container servicios-grid">
+        <div class="servicio-block">
+          <div class="servicio-img-container">
+            <img class="servicio-img" src="./assets/img/servicios/aseo-industrial.jpg" alt="servicio">
+
+            <div class="overlay"></div>
+
+            <div class="servicio-nombre-container">
+              <h2 class="servicio-nombre">ASEO INDUSTRIAL<br />EMPRESARIAL</h2>
+            </div>
+
+            <div class="arrow-container"><img src="./assets/img/arrow.png" alt="arrow"></div>
+          </div>
+
+          <div class="servicio-descripcion">
+            <p>NOS ENCARGAMOS DE ENTREGARTE LAS MEJORES CONDICIONES DE MANTENIMIENTO EN TERRENO PARA MANTENER
+              CONTINUIDAD OPERATIVA ENTREGANDO SOLUCIONES DE TIEMPO COMPLETO O POR EVENTO.
+            </p>
+          </div>
+        </div>
+
+        <div class="servicio-block">
+          <div class="servicio-img-container">
+            <img class="servicio-img" src="./assets/img/servicios/tecnicos-en-mantenimiento.jpg" alt="servicio">
+
+            <div class="overlay"></div>
+
+            <div class="servicio-nombre-container">
+              <h2 class="servicio-nombre">TECNICOS EN<br />MANTENIMIENTO</h2>
+            </div>
+
+            <div class="arrow-container"><img src="./assets/img/arrow.png" alt="arrow"></div>
+          </div>
+
+          <div class="servicio-descripcion">
+            <p>NOS ENCARGAMOS DE ENTREGARTE LAS MEJORES CONDICIONES DE MANTENIMIENTO EN TERRENO PARA MANTENER
+              CONTINUIDAD OPERATIVA ENTREGANDO SOLUCIONES DE TIEMPO COMPLETO O POR EVENTO.
+            </p>
+          </div>
+        </div>
+
+        <div class="servicio-block">
+          <div class="servicio-img-container">
+            <img class="servicio-img" src="./assets/img/servicios/mantenimiento-de-maquinaria.jpg" alt="servicio">
+
+            <div class="overlay"></div>
+
+            <div class="servicio-nombre-container">
+              <h2 class="servicio-nombre">MANTENIMIENTO<br />DE MAQUINARIA</h2>
+            </div>
+
+            <div class="arrow-container"><img src="./assets/img/arrow.png" alt="arrow"></div>
+          </div>
+
+          <div class="servicio-descripcion">
+            <p>NOS ENCARGAMOS DE ENTREGARTE LAS MEJORES CONDICIONES DE MANTENIMIENTO EN TERRENO PARA MANTENER
+              CONTINUIDAD OPERATIVA ENTREGANDO SOLUCIONES DE TIEMPO COMPLETO O POR EVENTO.
+            </p>
+          </div>
+        </div>
+
+        <div class="servicio-block">
+          <div class="servicio-img-container">
+            <img class="servicio-img" src="./assets/img/servicios/equipamiento-minero.jpg" alt="servicio">
+
+            <div class="overlay"></div>
+
+            <div class="servicio-nombre-container">
+              <h2 class="servicio-nombre">EQUIPAMIENTO<br />MINERO DE FLOTA</h2>
+            </div>
+
+            <div class="arrow-container"><img src="./assets/img/arrow.png" alt="arrow"></div>
+          </div>
+
+          <div class="servicio-descripcion">
+            <p>NOS ENCARGAMOS DE ENTREGARTE LAS MEJORES CONDICIONES DE MANTENIMIENTO EN TERRENO PARA MANTENER
+              CONTINUIDAD OPERATIVA ENTREGANDO SOLUCIONES DE TIEMPO COMPLETO O POR EVENTO.
+            </p>
+          </div>
+        </div>
+
+        <div class="servicio-block">
+          <div class="servicio-img-container">
+            <img class="servicio-img" src="./assets/img/servicios/gestion-de-compra.jpg" alt="servicio">
+
+            <div class="overlay"></div>
+
+            <div class="servicio-nombre-container">
+              <h2 class="servicio-nombre">GESTIONAMOS TU<br />COMPRA DE VEHICULOS</h2>
+            </div>
+
+            <div class="arrow-container"><img src="./assets/img/arrow.png" alt="arrow"></div>
+          </div>
+
+          <div class="servicio-descripcion">
+            <p>NOS ENCARGAMOS DE ENTREGARTE LAS MEJORES CONDICIONES DE MANTENIMIENTO EN TERRENO PARA MANTENER
+              CONTINUIDAD OPERATIVA ENTREGANDO SOLUCIONES DE TIEMPO COMPLETO O POR EVENTO.
+            </p>
+          </div>
+        </div>
+
+        <div class="servicio-block">
+          <div class="servicio-img-container">
+            <img class="servicio-img" src="./assets/img/servicios/mantenimiento-de-flota.jpg" alt="servicio">
+
+            <div class="overlay"></div>
+
+            <div class="servicio-nombre-container">
+              <h2 class="servicio-nombre">MANTENIMIENTO DE<br />FLOTA DE VEHICULOS</h2>
+            </div>
+
+            <div class="arrow-container"><img src="./assets/img/arrow.png" alt="arrow"></div>
+          </div>
+
+          <div class="servicio-descripcion">
+            <p>NOS ENCARGAMOS DE ENTREGARTE LAS MEJORES CONDICIONES DE MANTENIMIENTO EN TERRENO PARA MANTENER
+              CONTINUIDAD OPERATIVA ENTREGANDO SOLUCIONES DE TIEMPO COMPLETO O POR EVENTO.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="old-container servicios-tipos">
+        <div class="servicio-tipo-lg">
+          <img src="./assets/img/compra-de-vehiculo.png" alt="compra-de-vehiculo">
+          <h1 class="servicio-tipo-nombre">Aseo <span class="italic">Industrial</span> Empresarial</h1>
+        </div>
+
+        <div class="servicio-tipo-xs">
+          <img src="./assets/img/mantenimiendo-de-flota.png" alt="mantenimiendo-de-flota">
+          <h1 class="servicio-tipo-nombre">Mantenimiento de <span class="italic">Flota</span></h1>
+        </div>
+        <div class="servicio-tipo-xs">
+          <img src="./assets/img/tecnicos-en-mantenimiento.png" alt="tecnicos-en-mantenimiento">
+          <h1 class="servicio-tipo-nombre"><span class="italic">Tecnicos</span> en Mantenimiento</h1>
+        </div>
+        <div class="servicio-tipo-xs">
+          <img src="./assets/img/aseo-industrial.png" alt="aseo-industrial">
+          <h1 class="servicio-tipo-nombre">Aseo <span class="italic">Industrial</span> Empresarial</h1>
+        </div>
+
         <div class="servicio-tipo-sm">
           <img src="./assets/img/mantenimiendo-de-flota.png" alt="mantenimiendo-de-flota">
           <h1 class="servicio-tipo-nombre">Mantenimiento de <span class="italic">Flota</span></h1>
@@ -97,12 +243,8 @@
           <img src="./assets/img/tecnicos-en-mantenimiento.png" alt="tecnicos-en-mantenimiento">
           <h1 class="servicio-tipo-nombre"><span class="italic">Tecnicos</span> en Mantenimiento</h1>
         </div>
-        <div class="servicio-tipo-lg">
-          <img src="./assets/img/aseo-industrial.png" alt="aseo-industrial">
-          <h1 class="servicio-tipo-nombre">Aseo <span class="italic">Industrial</span></h1>
-        </div>
-      </div>
-    </section> -->
+      </div> -->
+    </section>
   </main>
 
   <script src="./index.js"></script>
